nui/css/opencore.css
/* ... */
/* "@Custom" CSS : clearAfter Hack, op-dropdown Dropdowns
-------------------------------------------- */

/* This hack replicates the CSS3 "clearAfter" property.
The IE hacks take advantage of several IE non-compliance issues to clearAfter the floated columns. */

.oc-clearAfter:after,
#oc-topnav-global:after,
#oc-page-container:after
{ 
  content: ""; 
  display: block; 
  height: 0; 
  clear: both;
  visibility: hidden;
}
      
/* GENERIC CLASSES & FORMS & WIDGETS & BEHAVIORS oh my - reusable thingys
-------------------------------------------

GENERIC: Buttons
GENERIC: Elements

@FORM Stuff
  Expanders
  Actions

@WIDGETS
  headingBlock
  List table
  Last modified
  Feeds
  Invitations
  Search box
  Alphabet Search
  
@BEHAVIORS

*/

.oc-hidden {
   display:none;
}
.oc-hover {
   background: #fdffdd;
}
/* GENERIC: Buttons */
input.oc-button {
  display: inline;
  padding: .25em .5em;
  font-size: inherit;
}
a.oc-button {
  display: block;
  padding:  0 .25em;
  border: 1px solid #ccc;
  text-decoration: none;
  background: #eee;
}
a.oc-button:hover {
  background: #ddd;
  color: #000;
}
a.oc-banana {
	display: block;
	text-align: center;
	font-size: 14px;
	font-weight: bold;
	background-color: #EB852B;
	border: 1px solid #B36521;
	border-right: 2px solid #B36521;
	border-bottom: 2px solid #B36521;
	color: #fff !important;
	text-decoration: none;
	padding: 0.25em;
	margin: 4em;
	margin-bottom: 0.75em;
	margin-top: 0;
}

/* GENERIC: Elements */
.oc-paginator {
  margin: 0;
  padding: 0;
}
.oc-paginator li {
  display: inline;
  padding: 0 .25em;
}
/* bcrumb */
.oc-bcrumb {
  padding: 0;
  margin: 0;
  display: inline;
  font-size: 12px;
  float: left;
  line-height: normal;
}
.oc-bcrumb li,
.oc-bcrumb li h1,
.oc-bcrumb li h2,
.oc-bcrumb li h3,
.oc-bcrumb li h4 {
  display: inline;
  line-height: inherit;
}
.oc-bcrumb .oc-bcrumb-current {
  font-size: 14px;
}
.oc-actionClose,
.oc-close {
  position: absolute;
  top: 0.5em;
  right: 1em;
  display: block;
}
.oc-message,
.oc-statusMessage {
  background-color: #EBD2BC;
  border: 1px solid #EB852B;
  color: #333333;
  font-weight: bold;
  margin: 0 0 1.5em;
  padding: 0.125em 1.5em 0.125em 0.25em;
  padding-right: 0.25em;
  position: relative; /* note: this causes psm to overlap topnav menu in IE.  disabled in ie.css */
  vertical-align: middle;
  z-index: 0;
}
.oc-message-error {
  background: pink;
}

/* @FORM Stuff */
fieldset .oc-legend-heading,
.oc-label-heading {
  display: block;
  margin: 0;
  margin-bottom: 0.25em;
  padding: 0;
 }
fieldset .oc-headingContext {
  margin: 0 0 1em;
  line-height: normal;
}
fieldset fieldset .oc-legend-heading,
#oc-content-sidebar fieldset .oc-legend-heading {
  font-size: 14px;
}
fieldset fieldset fieldset .oc-legend-heading,
#oc-content-sidebar fieldset fieldset .oc-legend-heading {
  font-size: 12px;
}
#oc-content-sidebar fieldset fieldset fieldset .oc-legend-heading {
  font-size: 10px;
}
fieldset .oc-legend-label {
  margin: 0;
  padding: 0;
  font-size: 12px;
}
#oc-content-sidebar fieldset .oc-legend-label {
  font-size: 10px;
}
fieldset .oc-heading-context {
  margin: 0 0 .5em;
  padding: 0;
}
.oc-label-option {
  font-weight: normal;
  font-size: 10px;
}

.oc-form {
}
.oc-form * {
  vertical-align: top;
  border-collapse: collapse;
  border-spacing: 0;
}
.oc-form-label {
  text-align: right;
  width: 8em;
  padding-right: 0.5em;
  line-height: normal;
}
.oc-form-radiolist {
  list-style-type: none;
  margin: 0 0 0 8em;
  padding: 0;
}
.oc-form-radiolist ul {
  list-style-type: none;
}
.oc-form-value {
  width: auto;
}
.oc-form-help {
  display: block;
  line-height: normal;
}
.oc-form-context {
  color: #666;
  font-style: italic;
}
.oc-form-validator {

}
.oc-form-error {
  color: #F00;
  font-weight: bold;
  font-size: 11px;
}
.oc-form-fieldBlock {
  /* white-space: nowrap; */
}
.oc-form-fieldBlock label {
  font-weight: normal;
}
.oc-form-fieldBlock input.oc-input-typeCheck,
.oc-form-fieldBlock input.oc-input-typeRadio {
  margin-left: 0;
}
.oc-fieldBlock-focused textarea, 
textarea.oc-fieldBlock-focused,
input.oc-fieldBlock-focused {
  border-color: orange;
  background: #fffff9;
}
.oc-fieldBlock-error textarea, 
textarea.oc-fieldBlock-error,
input.oc-fieldBlock-error {
  border-color: red;
  background: #ffdddd;
}
.oc-input-typeText { /* Since browser support for selecting by type is... limited */
}
.oc-input-typeRadio,
.oc-input-typeCheck {
/* font-size: 100%; This resizes radio and check elements to match the text
width: 1em;
height: 1em; */
}

/* Expanders */
.oc-expander {
  margin: 0;
}
.oc-expander h2,
.oc-expander h3 {
  margin: 0.25em 0;
}
.oc-expander-open {
  background: #F9F9F9;
  border: 1px solid #E6D3C0;
  padding: .5em;
  margin: 0.25em 0 0.5em;
}
.oc-expander-content {
  margin: .25em 0;
  padding: .5em;
}
.oc-expanderLink {
  background: url("/++resource++img/expander-nub-closed.gif") 0 3px no-repeat;
  padding-left: 12px;
}
.oc-expanderLink.oc-expanderLink-open {
  background: url("/++resource++img/expander-nub-open.gif") 0 3px no-repeat;
}

/* Actions */
.oc-actions { 
  margin: 0;
  padding: 0;
  font-size: 11px;
}
.oc-actions li {
  margin: 0;
  display: inline;
}

.oc-chooseThis { /* Default option */
  font-weight: bold;
}
.oc-actions .oc-chooseAccept,
.oc-actions a.oc-chooseAccept {
  color: #0c0;
}
.oc-actions .oc-chooseDeny,
.oc-actions a.oc-chooseDeny {
  color: #c00;
}
.oc-actions .oc-chooseSpam,
.actions a.chooseSpam {
  color: #999;
}

/* @WIDGETS */
.oc-widget {
 /* clear: both; */
}

/* Widget heading blocks */
.oc-widget .oc-headingBlock {
   margin-bottom: .5em;
   clear: both;
}
.oc-widget .oc-headingBlock h2 {
  font-size: 14px;
}
.oc-widget .oc-headingContext {
}

/* List table */
.oc-widget-dataTable {
  clear: both;
  margin-bottom: 4em;
}
.oc-dataTable-heading {
	color: #fff;
	background: #332F2A;
	padding: 0.25em;
	margin: 0;
}
/* ... */

